--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,9 @@ body {
    font-family: 'Roboto', sans-serif;
    font-size: 14px;
 }
+footer {
+   background-color: var(--secondaly);
+}
 img {
    display: block;
    max-width: 100%;
@@ -42,13 +45,6 @@ li {
    margin-right: auto;
    padding: 0% 15px 0% 15px;
    }
-.header-container {
-   display: flex;
-   align-items: center;
-
-   
-   border: 1px;
-}
 
 h1,
 h2, 
@@ -60,6 +56,12 @@ p {
    padding: 0%;
 }
 
+/* Хедер */
+.header-container {
+   display: flex;
+   align-items: center;
+   border-bottom: 1px solid #ECECEC;
+}
 /* Навигация */
 .main-nav {
    display: flex;
@@ -189,10 +191,10 @@ nav li:last-child {
    display: flex;
 }
 .features-list li {
-margin-right: 30px;
+   margin-right: 30px;
 }
 .features-list li:last-child {
-margin-right: 0%;
+   margin-right: 0%;
 }
 .features-details {
    margin-bottom: 10px;
@@ -302,14 +304,13 @@ margin-right: 0%;
 .logotipes {
    display: flex;
    margin-bottom: 20px;
-}
+} 
 /* Адрес */
 .address {
-   padding: 60px 0% 60px 215px;
+   padding: 60px 0% 60px 0%;
    font-family: 'Roboto';
    font-style: normal;
    letter-spacing: 0.03em;
-   background-color: var(--secondaly);
 }
 .mails {
    display: flex;
@@ -360,16 +361,23 @@ margin-right: 0%;
 }
 .reclam {
    display: flex;
-   align-items: flex-start;
-   flex-wrap: wrap;   
+   flex-wrap: wrap;
+   gap: 30px; 
+   /* background: #FFFFFF; */
+   /* margin-right: -30px;
+   margin-bottom: -30px; */
 }
-.flex-element {
-   margin: 30px 30px 30px 0%;
-}
+/* .reclam .reclam-list {
+   flex-basis: calc(100% / 3 - 30px);
+   margin-right: 30px;
+   margin-bottom: 30px;
+} */
+
 .reclam-tools {
    padding: 20px 24px;
+   border: 1px solid #EEEEEE;
 }
-.reclam-list {
+.reclam-title {
    margin-bottom: 4px;
 
    font-weight: 700;
